# gbc_hackathon_2025

./: .gitignore  README.md  local_pipeline.ipynb  main.py  pyproject.toml
